--- a/views/login.ejs
+++ b/views/login.ejs
@@ -97,16 +97,13 @@
                                     <div class="form-group m-t-30">
                                         <div class="col-sm-7">
                                             <a style="color: MintCream" href="pages-recoverpw.html" class="text-muted">
-                                        <%loginError.forEach(function(e){ %>
+                                        <h4 style="color: MintCream; font-family: 'font1'"><%loginError.forEach(function(e){ %>
                                         <%=e%>
-                                        <%})%></a>
+                                        <%})%><h4></a>
                                         </div>
                     
-                                        <div class="col-sm-12">
-                                        </div>
-                    
-                                        <div class="col-sm-5 text-right">
-                                            <a href="/login/new" class="text-muted" style="color: MintCream"; font-size=10px>Create an account</a>
+                                        <div class="col-sm-12 text-left">
+                                            <a href="/login/new" class="text-muted" style="color: MintCream;"; font-size=10px><h4 style="color: MintCream; font-family: 'font1'">&nbspCreate an account-><h4></a>
                                         </div>
                                     </div>
                                     
