--- a/views/med_per.ejs
+++ b/views/med_per.ejs
@@ -81,7 +81,7 @@
                                     <p><b><%=data.summary%></b></p>
                                     <%=data.content%>
                                     <hr/>
-                                    <img src="/upload/med/<%=data.image%>">
+                                    <img src="/upload/med/<%=data.image%>" style="max-width:100%;max-height:100%;">
                                     <!--h4> <i class="fa fa-paperclip m-r-10 m-b-10"></i> Attachments <span>(3)</span> </h4>
 
                                     <div class="row">
