--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,9 +70,9 @@
                                     <thead>
                                     <tr>
                                         <th>#</th>
-                                        <th>제목</th>
+                                        <th>포인트</th>
                                         <th>작성자</th>
-                                        <th>내용</th>
+                                        <th>이름</th>
                                         <th>이메일</th>
                                         <th>&nbsp&nbsp&nbsp상태</th>
                                     </tr>
