--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,7 +64,7 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <div class="card-box" style="padding-bottom:10px;">
-                            <h5 class="text-dark  header-title m-t-0">최근 업로드</h5>
+                            <h5 class="text-dark  header-title m-t-0">우수 사용자</h5>
                             <div class="table-responsive">
                                 <table class="table">
                                     <thead>
