--- a/views/med_per.ejs
+++ b/views/med_per.ejs
@@ -72,7 +72,7 @@
 
                                             <span class="media-meta pull-right"><%=full_date%></span>
                                             <h4 class="text-primary m-0"><%=data.writer_id%></h4>
-                                            <small class="text-muted"><%=data.contact%>pys2@gmail.com</small>
+                                            <small class="text-muted"><%=data.email%></small>
                                         </div>
                                     </div> <!-- media -->
                                     <p><b>예상금액: <%=data.pay%></b>&nbsp;&nbsp;
